# worklog-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  vscode_mcp_settings.json
src/worklog_mcp/: config.py  main.py  server.py
