[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worklog-mcp"
version = "0.2.0"
description = "Simple, plain-text worklog MCP server - searchable Markdown logs"
requires-python = ">=3.10"
dependencies = [
    "mcp",
]

[project.scripts]
worklog-mcp-server = "worklog_mcp.server:main"
